# tcf_materials

./: .gitattributes  .gitignore  .pre-commit-config.yaml  00_MASTER_PROMPT.md  01_PROJECT_CONTEXT.md  02_PHASE_1_FOUNDATION.md  03_PHASE_2_GRAMMAR.md  04_PHASE_3_VOCAB_LISTENING.md  05_PHASE_4_READING.md  06_PHASE_5_WRITING.md  07_PHASE_6_SPEAKING.md  08_PHASE_7_MOCKS_STRATEGY.md  09_PHASE_8_LAUNCH.md  404.html  AUDIT.md  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  LICENSE-CONTENT.txt  LICENSE-TOOLS.txt  Makefile  PHASE_1_AUDIT.md  PHASE_1_DESIGN.md  PHASE_1_EVAL.md  PHASE_2_AUDIT.md  PHASE_2_EVAL.md  PHASE_3_AUDIT.md  PHASE_3_DESIGN.md  PHASE_3_EVAL.md  PHASE_3_PREAUDIT.md  PHASE_4_AUDIT.md  PHASE_4_DESIGN.md  PHASE_4_EVAL.md  PHASE_5_AUDIT.md  PHASE_5_DESIGN.md  PHASE_5_EVAL.md  PHASE_6_AUDIT.md  PHASE_6_DESIGN.md  (+17 more)
.github/workflows/: build.yml  deploy-pages.yml
00_diagnostic/: index.html
00_diagnostic/00_index/: index.html
00_start_here/: index.html
01_grammar/: index.html
02_vocabulary/: index.html
03_listening/: index.html
04_reading/: index.html
05_writing/: index.html
06_speaking/: index.html
07_mock_exams/: index.html
08_cheatsheets/: index.html
09_strategy/: index.html
10_canada_culture/: index.html
11_tools/: index.html
content/: .pages  00_start_here.md  index.md  manifest.webmanifest
examples/: README.md
latex/: tcf-template.tex
overrides/: 404.html  main.html
tests/: conftest.py  test_audio_scripts.py  test_audit_alive.py  test_audit_runs.py  test_builds.py  test_calculate_score.py  test_frontmatter.py  test_links.py  test_naming.py  test_phase3_audit.py  test_phase3_tooling.py  test_roadmap.py
tools/: __init__.py  _common.py  anglicisms.yaml  audio_config.yaml  audit_french.py  audit_whitelist.txt  build_anki.py  build_audio.py  build_epub.py  build_hub_pages.py  build_pdf.py  build_site.py  calculate_score.py  check_frequency.py  cli.py  measure_density.py  mkdocs_estimated_minutes.py  mkdocs_external_refs.py  models.py  quebecisms.yaml  score_speaking.py  score_writing.py  scoring_rules.md  snapshot_grammar_ids.py  snapshot_phase3_ids.py  snapshot_phase4_ids.py  snapshot_phase5_ids.py  snapshot_phase6_ids.py  snapshot_phase7_ids.py
(+1040 files in other folders)
