[project]
name = "tcf-canada-prep"
version = "0.1.0"
description = "Production-grade TCF Canada exam preparation corpus (B1 -> C1/C2) — source-of-truth Markdown + multi-format build pipeline."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "CC-BY-SA-4.0 AND MIT" }
authors = [
  { name = "TCF Canada Prep contributors" },
]
keywords = ["tcf", "tcf-canada", "french", "language-learning", "nclc", "cefr"]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Intended Audience :: Education",
  "Topic :: Education :: Computer Aided Instruction (CAI)",
]
dependencies = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocs-awesome-pages-plugin>=2.9",
  "mkdocs-minify-plugin>=0.8",
  "mkdocs-glightbox>=0.4",
  "pymdown-extensions>=10.7",
  "genanki>=0.13",
  "edge-tts>=6.1",
  "pyyaml>=6.0",
  "python-frontmatter>=1.1",
  "jinja2>=3.1",
  "pydantic>=2.7",
  "rich>=13.7",
  "click>=8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-xdist>=3.5",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "pre-commit>=3.7",
]
audit = [
  # hunspell bindings are optional; the audit script degrades gracefully when absent.
  # On Linux/macOS: `apt install hunspell hunspell-fr` or `brew install hunspell`.
  # The Python binding `cyhunspell` is heavy to compile on Windows; we shell out instead.
]

[project.scripts]
tcf = "tools.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tools"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "C4"]
ignore = ["E501"]   # long lines are fine in French content / docstrings

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "needs_pandoc: requires pandoc system binary",
  "needs_xelatex: requires a working TeX Live install with xelatex",
  "needs_hunspell: requires hunspell + fr_FR + fr_CA dictionaries",
  "needs_network: requires network access (e.g. edge-tts)",
]
